--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
