--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material": "^0.9.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.1.0",
     "react-kakao-maps": "^0.0.13",
     "react-router-dom": "^6.23.0",
